# jira: BA-110
# uat: UAT-4.2 Tab Navigation
appId: polygentic.bijouxParentApp
---
- launchApp:
    clearState: true
    clearKeychain: true

- waitForAnimationToEnd

- tapOn:
    id: "onboarding-get-started-button"

- waitForAnimationToEnd

- tapOn:
    text: "you@example.com"

- inputText: "parent-sarah@test.bijoux.app"

- tapOn: "Welcome Back"

- tapOn: "Enter your password"

- inputText: "Test1234!"

- tapOn: "Welcome Back"

- tapOn:
    id: "login-submit-button"

- waitForAnimationToEnd

- assertVisible: "Request Now"

- takeScreenshot: tab-home

- tapOn: "Activity"

- waitForAnimationToEnd

- takeScreenshot: tab-activity

- tapOn: "Profile"

- waitForAnimationToEnd

- takeScreenshot: tab-profile

- tapOn: "Home"

- waitForAnimationToEnd

- assertVisible: "Request Now"

- takeScreenshot: tab-back-to-home
